fix: correct Dutch diacritics and English grammar across i18n files

--- a/src/main/resources/messages_nl.properties
+++ b/src/main/resources/messages_nl.properties
@@ -106,7 +106,7 @@ hobbies.lang.conversational=Conversatieniveau
 # Contact
 contact.badge=In contact komen
 contact.title=Neem contact op
-contact.description=Heb je een project in gedachten of wil je gewoon praten over software engineering? Ik sta altijd open voor nieuwe kansen en ideeen.
+contact.description=Heb je een project in gedachten of wil je gewoon praten over software engineering? Ik sta altijd open voor nieuwe kansen en ideeën.
 contact.linkedin=LinkedIn
 contact.linkedin.name=Phi Tiet
 contact.github=GitHub
