--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -87,7 +87,7 @@ recommendations.next=Next recommendation
 recommendations.goto=Go to recommendation {0}
 
 # Hobbies
-hobbies.badge=Beyond The Code
+hobbies.badge=Beyond the Code
 hobbies.title=Life Outside Work
 hobbies.description=When I'm not pushing commits, here's what keeps me busy.
 hobbies.photo.chess=Playing chess
@@ -95,7 +95,7 @@ hobbies.photo.cat=With my cat
 hobbies.photo.pieter=With colleague Pieter
 hobbies.photo.beach=At the beach
 hobbies.photo.view=View photo {0}
-hobbies.about=After work, you'll find me wearing multiple hats \u2014 not just the coding kind. I'm a foodie exploring culinary wonders, a game enthusiast always down for one more round, a home-cook scrolling through recipe videos, and a chess amateur gambit'ing online and over-the-board. Whether I'm binge-watching anime or globe-trotting in search of good Wi-Fi, there's never a dull moment.
+hobbies.about=After work, you'll find me wearing multiple hats \u2014 not just the coding kind. I'm a foodie exploring culinary wonders, a game enthusiast always down for one more round, a home-cook scrolling through recipe videos, and a chess amateur trying gambits online and over the board. Whether I'm binge-watching anime or globe-trotting in search of good Wi-Fi, there's never a dull moment.
 hobbies.languages=Languages
 hobbies.lang.dutch=Dutch
 hobbies.lang.english=English
@@ -105,7 +105,7 @@ hobbies.lang.conversational=Conversational
 
 # Contact
 contact.badge=Let's Connect
-contact.title=Get In Touch
+contact.title=Get in Touch
 contact.description=Have a project in mind or just want to chat about software engineering? I'm always open to discussing new opportunities and ideas.
 contact.linkedin=LinkedIn
 contact.linkedin.name=Phi Tiet
