revert: restore original gambit'ing phrasing

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -95,7 +95,7 @@ hobbies.photo.cat=With my cat
 hobbies.photo.pieter=With colleague Pieter
 hobbies.photo.beach=At the beach
 hobbies.photo.view=View photo {0}
-hobbies.about=After work, you'll find me wearing multiple hats \u2014 not just the coding kind. I'm a foodie exploring culinary wonders, a game enthusiast always down for one more round, a home-cook scrolling through recipe videos, and a chess amateur trying gambits online and over the board. Whether I'm binge-watching anime or globe-trotting in search of good Wi-Fi, there's never a dull moment.
+hobbies.about=After work, you'll find me wearing multiple hats \u2014 not just the coding kind. I'm a foodie exploring culinary wonders, a game enthusiast always down for one more round, a home-cook scrolling through recipe videos, and a chess amateur gambit'ing online and over-the-board. Whether I'm binge-watching anime or globe-trotting in search of good Wi-Fi, there's never a dull moment.
 hobbies.languages=Languages
 hobbies.lang.dutch=Dutch
 hobbies.lang.english=English
