--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -11,6 +11,7 @@ nav.recommendations=Recommendations
 nav.hobbies=Hobbies
 nav.contact=Contact
 nav.toggle.menu=Toggle menu
+nav.aria.label=Main navigation
 
 # Hero
 hero.greeting=Hey there, I'm
