fix: resolve WCAG 2 AA contrast and link accessibility violations
Replace white text on accent backgrounds (#2dd4bf) with dark teal
(#042f2e) via new --color-accent-contrast variable, raising contrast
ratio from ~1.8:1 to ~9.5:1 across 13 instances. Add aria-label to
logo link for discernible text on small viewports.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -11,6 +11,7 @@ nav.recommendations=Recommendations
 nav.hobbies=Hobbies
 nav.contact=Contact
 nav.toggle.menu=Toggle menu
+nav.home=Phi Tiet - Home
 nav.aria.label=Main navigation
 
 # Hero
