--- a/src/main/resources/messages_nl.properties
+++ b/src/main/resources/messages_nl.properties
@@ -11,6 +11,7 @@ nav.recommendations=Aanbevelingen
 nav.hobbies=Hobby's
 nav.contact=Contact
 nav.toggle.menu=Menu openen
+nav.home=Phi Tiet - Home
 nav.aria.label=Hoofdnavigatie
 
 # Hero
