fix: shorten experience section description

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -55,7 +55,7 @@ about.github.repo=PhiTiet/portfolio
 # Timeline / Experience
 experience.badge=Career Journey
 experience.title=Work Experience
-experience.description=From hospitality roots to senior engineering roles \u2014 every step shaped who I am today.
+experience.description=From hospitality roots to senior engineering roles.
 experience.current=Current
 experience.show.less=Show less
 experience.read.more=Read more
