--- a/src/main/resources/messages_nl.properties
+++ b/src/main/resources/messages_nl.properties
@@ -55,7 +55,7 @@ about.github.repo=PhiTiet/portfolio
 # Timeline / Experience
 experience.badge=Loopbaan
 experience.title=Werkervaring
-experience.description=Van horeca-achtergrond naar senior engineering-rollen \u2014 elke stap heeft me gevormd tot wie ik vandaag ben.
+experience.description=Van horeca-achtergrond naar senior engineering-rollen.
 experience.current=Huidig
 experience.show.less=Toon minder
 experience.read.more=Lees meer
