feat: add projects section, contact form, dark/light toggle, error pages, and cleanup
- Add Projects section with portfolio, Advent of Code, and HVC Notifier cards
- Add contact form (frontend-only, Alpine.js) with name/email/message fields
- Add light/dark theme toggle with localStorage persistence and system preference detection
- Add custom 404 and 500 error pages using Layout Dialect
- Add keyboard navigation (arrow keys) and ARIA attributes to recommendation carousel
- Remove HTMX references from hero modal, footer, and message files
- Add MIT license
- Update README: remove HTMX, document new features, add license badge

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -6,6 +6,7 @@ scroll.to.top=Scroll to top
 nav.about=About
 nav.experience=Experience
 nav.skills=Skills
+nav.projects=Projects
 nav.education=Education
 nav.recommendations=Recommendations
 nav.hobbies=Hobbies
@@ -13,6 +14,7 @@ nav.contact=Contact
 nav.toggle.menu=Toggle menu
 nav.home=Phi Tiet - Home
 nav.aria.label=Main navigation
+theme.toggle=Toggle theme
 
 # Hero
 hero.greeting=Hey there, I'm
@@ -46,7 +48,6 @@ about.techstack=Tech Stack
 about.tech.springboot=Spring Boot
 about.tech.thymeleaf=Thymeleaf
 about.tech.alpinejs=Alpine.js
-about.tech.htmx=HTMX
 about.tech.tailwind=Tailwind CSS 4
 about.tech.yaml=YAML-driven
 about.github.cta=View source on GitHub
@@ -113,9 +114,31 @@ contact.linkedin=LinkedIn
 contact.linkedin.name=Phi Tiet
 contact.github=GitHub
 contact.github.name=PhiTiet
+contact.form.title=Send a Message
+contact.form.name=Name
+contact.form.name.placeholder=Your name
+contact.form.email=Email
+contact.form.email.placeholder=you@example.com
+contact.form.message=Message
+contact.form.message.placeholder=What would you like to discuss?
+contact.form.send=Send Message
+contact.form.success.title=Message Sent!
+contact.form.success.message=Thanks for reaching out. I'll get back to you soon.
+
+# Projects
+projects.badge=What I've Built
+projects.title=Projects
+projects.description=A selection of personal projects that reflect my interests and technical growth.
+projects.portfolio.title=Portfolio Website
+projects.portfolio.description=This website \u2014 a self-hosted Spring Boot application with Thymeleaf, Alpine.js and Tailwind CSS.
+projects.aoc.title=Advent of Code
+projects.aoc.description=My solutions to the annual Advent of Code programming challenges, written in Kotlin.
+projects.hvc.title=HVC Notifier
+projects.hvc.description=A Kotlin Spring Boot service that monitors hockey schedules and sends automated notifications.
+projects.private=Private
 
 # Footer
-footer.built.with=Built with Spring Boot, Thymeleaf, HTMX & Tailwind CSS
+footer.built.with=Built with Spring Boot, Thymeleaf, Alpine.js & Tailwind CSS
 footer.rights=Phi Tiet. All rights reserved.
 footer.linkedin=LinkedIn Profile
 footer.github=GitHub Profile
@@ -130,3 +153,12 @@ seo.twitter.description=Senior Software Engineer specializing in Java, Kotlin, a
 
 # Timeline current text
 timeline.current=current
+
+# Error pages
+error.404.title=Page Not Found - Phi Tiet
+error.404.heading=Page Not Found
+error.404.message=The page you're looking for doesn't exist or has been moved.
+error.500.title=Server Error - Phi Tiet
+error.500.heading=Something Went Wrong
+error.500.message=An unexpected error occurred. Please try again later.
+error.back.home=Back to Home
