--- a/src/main/resources/messages_nl.properties
+++ b/src/main/resources/messages_nl.properties
@@ -6,6 +6,7 @@ scroll.to.top=Scroll naar boven
 nav.about=Over mij
 nav.experience=Ervaring
 nav.skills=Vaardigheden
+nav.projects=Projecten
 nav.education=Opleiding
 nav.recommendations=Aanbevelingen
 nav.hobbies=Hobby's
@@ -13,6 +14,7 @@ nav.contact=Contact
 nav.toggle.menu=Menu openen
 nav.home=Phi Tiet - Home
 nav.aria.label=Hoofdnavigatie
+theme.toggle=Thema wisselen
 
 # Hero
 hero.greeting=Hey, ik ben
@@ -46,7 +48,6 @@ about.techstack=Tech Stack
 about.tech.springboot=Spring Boot
 about.tech.thymeleaf=Thymeleaf
 about.tech.alpinejs=Alpine.js
-about.tech.htmx=HTMX
 about.tech.tailwind=Tailwind CSS 4
 about.tech.yaml=YAML-driven
 about.github.cta=Bekijk de broncode op GitHub
@@ -113,9 +114,31 @@ contact.linkedin=LinkedIn
 contact.linkedin.name=Phi Tiet
 contact.github=GitHub
 contact.github.name=PhiTiet
+contact.form.title=Stuur een bericht
+contact.form.name=Naam
+contact.form.name.placeholder=Je naam
+contact.form.email=E-mail
+contact.form.email.placeholder=jij@voorbeeld.nl
+contact.form.message=Bericht
+contact.form.message.placeholder=Waar wil je het over hebben?
+contact.form.send=Verstuur bericht
+contact.form.success.title=Bericht verzonden!
+contact.form.success.message=Bedankt voor je bericht. Ik neem zo snel mogelijk contact met je op.
+
+# Projects
+projects.badge=Wat ik heb gebouwd
+projects.title=Projecten
+projects.description=Een selectie van persoonlijke projecten die mijn interesses en technische groei weerspiegelen.
+projects.portfolio.title=Portfolio Website
+projects.portfolio.description=Deze website \u2014 een zelfgehoste Spring Boot-applicatie met Thymeleaf, Alpine.js en Tailwind CSS.
+projects.aoc.title=Advent of Code
+projects.aoc.description=Mijn oplossingen voor de jaarlijkse Advent of Code-programmeeruitdagingen, geschreven in Kotlin.
+projects.hvc.title=HVC Notifier
+projects.hvc.description=Een Kotlin Spring Boot-service die hockeyroosters monitort en automatische notificaties verstuurt.
+projects.private=Priv\u00e9
 
 # Footer
-footer.built.with=Gebouwd met Spring Boot, Thymeleaf, HTMX & Tailwind CSS
+footer.built.with=Gebouwd met Spring Boot, Thymeleaf, Alpine.js & Tailwind CSS
 footer.rights=Phi Tiet. Alle rechten voorbehouden.
 footer.linkedin=LinkedIn Profiel
 footer.github=GitHub Profiel
@@ -130,3 +153,12 @@ seo.twitter.description=Senior Software Engineer gespecialiseerd in Java, Kotlin
 
 # Timeline current text
 timeline.current=huidig
+
+# Error pages
+error.404.title=Pagina niet gevonden - Phi Tiet
+error.404.heading=Pagina niet gevonden
+error.404.message=De pagina die je zoekt bestaat niet of is verplaatst.
+error.500.title=Serverfout - Phi Tiet
+error.500.heading=Er ging iets mis
+error.500.message=Er is een onverwachte fout opgetreden. Probeer het later opnieuw.
+error.back.home=Terug naar Home
