fix: correct HVC description, add kut-ns project, darken light mode, fix carousel and timeline bugs

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -134,7 +134,9 @@ projects.portfolio.description=This website \u2014 a self-hosted Spring Boot app
 projects.aoc.title=Advent of Code
 projects.aoc.description=My solutions to the annual Advent of Code programming challenges, written in Kotlin.
 projects.hvc.title=HVC Notifier
-projects.hvc.description=A Kotlin Spring Boot service that monitors hockey schedules and sends automated notifications.
+projects.hvc.description=A Java Spring Boot service that monitors trash collection schedules via the HVC API and sends daily email reminders.
+projects.kutns.title=kut-ns
+projects.kutns.description=A satirical website (kutns.nl) where frustrated Dutch commuters click a big red button to vent about NS, featuring a live heatmap of clicks across the Netherlands.
 projects.private=Private
 
 # Footer
@@ -152,7 +154,7 @@ seo.og.image.alt=Phi Tiet - Senior Software Engineer
 seo.twitter.description=Senior Software Engineer specializing in Java, Kotlin, and Spring Boot.
 
 # Timeline current text
-timeline.current=current
+timeline.current=Present
 
 # Error pages
 error.404.title=Page Not Found - Phi Tiet
