--- a/src/main/resources/messages_nl.properties
+++ b/src/main/resources/messages_nl.properties
@@ -134,7 +134,9 @@ projects.portfolio.description=Deze website \u2014 een zelfgehoste Spring Boot-a
 projects.aoc.title=Advent of Code
 projects.aoc.description=Mijn oplossingen voor de jaarlijkse Advent of Code-programmeeruitdagingen, geschreven in Kotlin.
 projects.hvc.title=HVC Notifier
-projects.hvc.description=Een Kotlin Spring Boot-service die hockeyroosters monitort en automatische notificaties verstuurt.
+projects.hvc.description=Een Java Spring Boot-service die afvalinzamelroosters monitort via de HVC API en dagelijkse e-mailherinneringen verstuurt.
+projects.kutns.title=kut-ns
+projects.kutns.description=Een satirische website (kutns.nl) waar gefrustreerde Nederlandse forenzen op een grote rode knop klikken om te klagen over NS, met een live heatmap van klikken door heel Nederland.
 projects.private=Priv\u00e9
 
 # Footer
@@ -152,7 +154,7 @@ seo.og.image.alt=Phi Tiet - Senior Software Engineer
 seo.twitter.description=Senior Software Engineer gespecialiseerd in Java, Kotlin en Spring Boot.
 
 # Timeline current text
-timeline.current=huidig
+timeline.current=Huidig
 
 # Error pages
 error.404.title=Pagina niet gevonden - Phi Tiet
