fix: address code review findings for accessibility, error handling, and cleanup
Fix critical badRequest() handler returning void instead of error view,
add i18n support for theme toggle aria-labels, improve accessibility
with progressbar roles, aria-hidden icons, and mobile menu aria-controls,
remove redundant attributes and dead code.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -14,7 +14,8 @@ nav.contact=Contact
 nav.toggle.menu=Toggle menu
 nav.home=Phi Tiet - Home
 nav.aria.label=Main navigation
-theme.toggle=Toggle theme
+theme.toggle.dark=Switch to dark mode
+theme.toggle.light=Switch to light mode
 
 # Hero
 hero.greeting=Hey there, I'm
@@ -57,7 +58,6 @@ about.github.repo=PhiTiet/portfolio
 experience.badge=Career Journey
 experience.title=Work Experience
 experience.description=From hospitality roots to senior engineering roles.
-experience.current=Current
 experience.show.less=Show less
 experience.read.more=Read more
 
@@ -157,6 +157,9 @@ seo.twitter.description=Senior Software Engineer specializing in Java, Kotlin, a
 timeline.current=Present
 
 # Error pages
+error.400.title=Bad Request - Phi Tiet
+error.400.heading=Bad Request
+error.400.message=The request could not be understood. Please check your input and try again.
 error.404.title=Page Not Found - Phi Tiet
 error.404.heading=Page Not Found
 error.404.message=The page you're looking for doesn't exist or has been moved.
