--- a/src/main/resources/messages_nl.properties
+++ b/src/main/resources/messages_nl.properties
@@ -14,7 +14,8 @@ nav.contact=Contact
 nav.toggle.menu=Menu openen
 nav.home=Phi Tiet - Home
 nav.aria.label=Hoofdnavigatie
-theme.toggle=Thema wisselen
+theme.toggle.dark=Schakel naar donker thema
+theme.toggle.light=Schakel naar licht thema
 
 # Hero
 hero.greeting=Hey, ik ben
@@ -57,7 +58,6 @@ about.github.repo=PhiTiet/portfolio
 experience.badge=Loopbaan
 experience.title=Werkervaring
 experience.description=Van horeca-achtergrond naar senior engineering-rollen.
-experience.current=Huidig
 experience.show.less=Toon minder
 experience.read.more=Lees meer
 
@@ -157,6 +157,9 @@ seo.twitter.description=Senior Software Engineer gespecialiseerd in Java, Kotlin
 timeline.current=Huidig
 
 # Error pages
+error.400.title=Ongeldig verzoek - Phi Tiet
+error.400.heading=Ongeldig verzoek
+error.400.message=Het verzoek kon niet worden begrepen. Controleer je invoer en probeer het opnieuw.
 error.404.title=Pagina niet gevonden - Phi Tiet
 error.404.heading=Pagina niet gevonden
 error.404.message=De pagina die je zoekt bestaat niet of is verplaatst.
