fix: update AoC description to mention both Java and Kotlin

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -132,7 +132,7 @@ projects.description=A selection of personal projects that reflect my interests 
 projects.portfolio.title=Portfolio Website
 projects.portfolio.description=This website \u2014 a self-hosted Spring Boot application with Thymeleaf, Alpine.js and Tailwind CSS.
 projects.aoc.title=Advent of Code
-projects.aoc.description=My solutions to the annual Advent of Code programming challenges, written in Kotlin.
+projects.aoc.description=My solutions to the annual Advent of Code programming challenges, written in Java and Kotlin.
 projects.hvc.title=HVC Notifier
 projects.hvc.description=A Java Spring Boot service that monitors trash collection schedules via the HVC API and sends daily email reminders.
 projects.kutns.title=kut-ns
