--- a/src/main/resources/messages_nl.properties
+++ b/src/main/resources/messages_nl.properties
@@ -132,7 +132,7 @@ projects.description=Een selectie van persoonlijke projecten die mijn interesses
 projects.portfolio.title=Portfolio Website
 projects.portfolio.description=Deze website \u2014 een zelfgehoste Spring Boot-applicatie met Thymeleaf, Alpine.js en Tailwind CSS.
 projects.aoc.title=Advent of Code
-projects.aoc.description=Mijn oplossingen voor de jaarlijkse Advent of Code-programmeeruitdagingen, geschreven in Kotlin.
+projects.aoc.description=Mijn oplossingen voor de jaarlijkse Advent of Code-programmeeruitdagingen, geschreven in Java en Kotlin.
 projects.hvc.title=HVC Notifier
 projects.hvc.description=Een Java Spring Boot-service die afvalinzamelroosters monitort via de HVC API en dagelijkse e-mailherinneringen verstuurt.
 projects.kutns.title=kut-ns
