feat: add professional projects, reorder sections, and cross-link timeline
- Move recommendations section to right after hero (about me)
- Update navbar link order to match new section order
- Split projects into Professional and Personal subsections
- Add 4 professional project cards: Ahold Delhaize (Gambit), Rabobank (MED), Ordina & Qualogy, MedIT Solutions (MediCheck)
- Cross-link project cards to timeline entries and vice versa
- Add i18n keys for all new content in EN and NL
- Fix section-alt alternation pattern for new order

--- a/src/main/resources/messages_nl.properties
+++ b/src/main/resources/messages_nl.properties
@@ -128,7 +128,22 @@ contact.form.success.message=Bedankt voor je bericht. Ik neem zo snel mogelijk c
 # Projects
 projects.badge=Wat ik heb gebouwd
 projects.title=Projecten
-projects.description=Een selectie van persoonlijke projecten die mijn interesses en technische groei weerspiegelen.
+projects.description=Professioneel werk en persoonlijke projecten die mijn groei als engineer weerspiegelen.
+projects.professional=Professioneel
+projects.personal=Persoonlijk
+projects.view.timeline=Bekijk in tijdlijn
+projects.view.project=Bekijk project
+projects.private=Priv\u00e9
+# Professionele projecten
+projects.ahold.title=Ahold Delhaize
+projects.ahold.description=Gewerkt in Gambit, de ad-tech-divisie van Ahold Delhaize, waar ik microservices bouwde en onderhield voor het aanmaken en factureren van mediacampagnes.
+projects.rabobank.title=Rabobank
+projects.rabobank.description=MED gebouwd en onderhouden \u2014 een dashboard voor hypotheekadviseurs en klanten om hypotheken te plannen, documenten te uploaden, fases bij te houden en met elkaar te communiceren.
+projects.ordina.title=Ordina & Qualogy
+projects.ordina.description=Detacheringsrollen waarin ik bijdroeg aan interne projecten (o.a. KNSB back-end), kandidaatselectie leidde via interviews en opdrachten, en kennissessies en bedrijfsevenementen organiseerde.
+projects.medit.title=MedIT Solutions
+projects.medit.description=Gewerkt aan MediCheck \u2014 een web- en mobiele applicatie voor verpleeghuizen om medicijnen toe te dienen aan pati\u00ebnten, feedback vast te leggen en samen te werken binnen zorgteams.
+# Persoonlijke projecten
 projects.portfolio.title=Portfolio Website
 projects.portfolio.description=Deze website \u2014 een zelfgehoste Spring Boot-applicatie met Thymeleaf, Alpine.js en Tailwind CSS.
 projects.aoc.title=Advent of Code
@@ -137,7 +152,6 @@ projects.hvc.title=HVC Notifier
 projects.hvc.description=Een Java Spring Boot-service die afvalinzamelroosters monitort via de HVC API en dagelijkse e-mailherinneringen verstuurt.
 projects.kutns.title=kut-ns
 projects.kutns.description=Een satirische website (kutns.nl) waar gefrustreerde Nederlandse forenzen op een grote rode knop klikken om te klagen over NS, met een live heatmap van klikken door heel Nederland.
-projects.private=Priv\u00e9
 
 # Footer
 footer.built.with=Gebouwd met Spring Boot, Thymeleaf, Alpine.js & Tailwind CSS
