--- a/src/main/resources/messages_nl.properties
+++ b/src/main/resources/messages_nl.properties
@@ -139,8 +139,8 @@ projects.ahold.title=Ahold Delhaize
 projects.ahold.description=Gewerkt in Gambit, de ad-tech-divisie van Ahold Delhaize, waar ik microservices bouwde en onderhield voor het aanmaken en factureren van mediacampagnes.
 projects.rabobank.title=Rabobank
 projects.rabobank.description=MED gebouwd en onderhouden \u2014 een dashboard voor hypotheekadviseurs en klanten om hypotheken te plannen, documenten te uploaden, fases bij te houden en met elkaar te communiceren.
-projects.ordina.title=Ordina & Qualogy
-projects.ordina.description=Detacheringsrollen waarin ik bijdroeg aan interne projecten (o.a. KNSB back-end), kandidaatselectie leidde via interviews en opdrachten, en kennissessies en bedrijfsevenementen organiseerde.
+projects.qualogy.title=Qualogy
+projects.qualogy.description=Bijgedragen aan interne projecten zoals de KNSB back-end, kandidaatselectie geleid via interviews en programmeeropdrachten, en kennissessies en bedrijfsevenementen georganiseerd.
 projects.medit.title=MedIT Solutions
 projects.medit.description=Gewerkt aan MediCheck \u2014 een web- en mobiele applicatie voor verpleeghuizen om medicijnen toe te dienen aan pati\u00ebnten, feedback vast te leggen en samen te werken binnen zorgteams.
 # Persoonlijke projecten
