feat(i18n): add thesis label translations

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -79,6 +79,7 @@ certificates.description=Academic foundation and professional certifications tha
 certificates.category.education=Education
 certificates.category.language=Language
 certificates.category.professional=Professional
+certificates.thesis=Thesis
 
 # Recommendations
 recommendations.badge=What Others Say
