--- a/src/main/resources/messages_nl.properties
+++ b/src/main/resources/messages_nl.properties
@@ -79,6 +79,7 @@ certificates.description=Academische basis en professionele certificeringen die 
 certificates.category.education=Opleiding
 certificates.category.language=Taal
 certificates.category.professional=Professioneel
+certificates.thesis=Scriptie
 
 # Recommendations
 recommendations.badge=Wat anderen zeggen
