feat(hero): add welcome message to top of hero section
Add a welcome message at the top of the hero section that reads
"Welcome to my self-built portfolio website!" in both English
and Dutch.

Changes:
- Add hero.welcome key to messages.properties (English)
- Add hero.welcome key to messages_nl.properties (Dutch)
- Add styled welcome paragraph to hero.html fragment

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -18,6 +18,7 @@ theme.toggle.dark=Switch to dark mode
 theme.toggle.light=Switch to light mode
 
 # Hero
+hero.welcome=Welcome to my self-built portfolio website!
 hero.greeting=Hey there, I'm
 hero.name=Phi Tiet
 hero.title=Senior Software Engineer
