--- a/src/main/resources/messages_nl.properties
+++ b/src/main/resources/messages_nl.properties
@@ -18,6 +18,7 @@ theme.toggle.dark=Schakel naar donker thema
 theme.toggle.light=Schakel naar licht thema
 
 # Hero
+hero.welcome=Welkom op mijn zelfgebouwde portfolio website!
 hero.greeting=Hey, ik ben
 hero.name=Phi Tiet
 hero.title=Senior Software Engineer
