feat(content): humanize portfolio text with confident, witty voice
Rewrote key sections to sound more authentic and personal instead of
AI-generated corporate speak. Changes maintain professional credibility
while adding personality appropriate for a 26-year-old engineer.

English changes:
- hero.description: More conversational, shows genuine enthusiasm
- skills.description: Confident expertise with pragmatic wisdom
- recommendations.description: Witty spoiler framing
- hobbies.about: Specific activities with dry humor
- contact.description: Selective but curious positioning
- projects.description: Honest distinction between paid/personal work

Dutch changes:
- All sections translated maintaining the same confident, witty tone
- Natural Dutch phrasing that doesn't sound translated

Both languages now avoid banned AI words (robust, scalable, etc.)
and use varied sentence structures with authentic voice.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -22,7 +22,7 @@ hero.welcome=Welcome to my self-built portfolio website!
 hero.greeting=Hey there, I'm
 hero.name=Phi Tiet
 hero.title=Senior Software Engineer
-hero.description=I build robust backend systems with Java and Kotlin. With over {0} years of professional experience, I focus on clean architecture, microservices, and mentoring to deliver quality software.
+hero.description=I turn business problems into working Java and Kotlin. {0} years in, I still get excited about clean architecture, still believe microservices are only sometimes the answer, and still think the best code is the code your future self won't curse.
 hero.view.work=View My Work
 hero.get.in.touch=Get in Touch
 hero.about.website=About This Website
@@ -65,7 +65,7 @@ experience.read.more=Read more
 # Skills
 skills.badge=What I Work With
 skills.title=Technical Skills
-skills.description=Years of hands-on experience building scalable backend systems, coaching teams, and shipping production-grade software.
+skills.description=I build backends that stay up, coach teams that level up, and ship code I'm happy to maintain. Java, Kotlin, Spring, and the judgment to know when not to use them.
 skills.expertise.backend=Backend Development
 skills.expertise.backend.desc=Java, Kotlin, Spring Boot, Microservices
 skills.expertise.cloud=Cloud & DevOps
@@ -85,7 +85,7 @@ certificates.thesis=Thesis
 # Recommendations
 recommendations.badge=What Others Say
 recommendations.title=Recommendations
-recommendations.description=Kind words from colleagues and managers I've had the privilege to work with.
+recommendations.description=What people say when they don't have to be nice. (Spoiler: they're nice anyway.)
 recommendations.view.letter=View Letter
 recommendations.prev=Previous recommendation
 recommendations.next=Next recommendation
@@ -100,7 +100,7 @@ hobbies.photo.cat=With my cat
 hobbies.photo.pieter=With colleague Pieter
 hobbies.photo.beach=At the beach
 hobbies.photo.view=View photo {0}
-hobbies.about=After work, you'll find me wearing multiple hats \u2014 not just the coding kind. I'm a foodie exploring culinary wonders, a game enthusiast always down for one more round, a home-cook scrolling through recipe videos, and a chess amateur gambit'ing online and over-the-board. Whether I'm binge-watching anime or globe-trotting in search of good Wi-Fi, there's never a dull moment.
+hobbies.about=When the IDE closes: cooking something that takes twice as long as ordering would, chess openings I've memorized but don't fully understand, games that frustrate me in the best way, and anime with subtitles on. Balance, apparently.
 hobbies.languages=Languages
 hobbies.lang.dutch=Dutch
 hobbies.lang.english=English
@@ -111,7 +111,7 @@ hobbies.lang.conversational=Conversational
 # Contact
 contact.badge=Let's Connect
 contact.title=Get in Touch
-contact.description=Have a project in mind or just want to chat about software engineering? I'm always open to discussing new opportunities and ideas.
+contact.description=Good projects, good people, or good arguments about software. I don't say yes to everything, but I'm always curious.
 contact.linkedin=LinkedIn
 contact.linkedin.name=Phi Tiet
 contact.github=GitHub
@@ -130,7 +130,7 @@ contact.form.success.message=Thanks for reaching out. I'll get back to you soon.
 # Projects
 projects.badge=What I've Built
 projects.title=Projects
-projects.description=Professional work and personal projects that reflect my growth as an engineer.
+projects.description=Things I built because someone paid me, and things I built because I wanted them to exist. Both taught me something.
 projects.professional=Professional
 projects.personal=Personal
 projects.view.timeline=View in timeline
