--- a/src/main/resources/messages_nl.properties
+++ b/src/main/resources/messages_nl.properties
@@ -22,7 +22,7 @@ hero.welcome=Welkom op mijn zelfgebouwde portfolio website!
 hero.greeting=Hey, ik ben
 hero.name=Phi Tiet
 hero.title=Senior Software Engineer
-hero.description=Ik bouw robuuste backend-systemen met Java en Kotlin. Met meer dan {0} jaar professionele ervaring richt ik me op clean architecture, microservices en het begeleiden van teams om kwalitatieve software te leveren.
+hero.description=Ik vertaal businessproblemen naar werkende Java en Kotlin. Na {0} jaar word ik nog steeds enthousiast van clean architecture, geloof ik nog steeds dat microservices soms wel, soms niet het antwoord zijn, en vind ik nog steeds dat de beste code degene is waar je toekomstige zelf geen vloeken over uit.
 hero.view.work=Bekijk mijn werk
 hero.get.in.touch=Neem contact op
 hero.about.website=Over deze website
@@ -65,7 +65,7 @@ experience.read.more=Lees meer
 # Skills
 skills.badge=Waar ik mee werk
 skills.title=Technische vaardigheden
-skills.description=Jarenlange hands-on ervaring met het bouwen van schaalbare backend-systemen, het coachen van teams en het opleveren van productiewaardige software.
+skills.description=Ik bouw backends die blijven draaien, coach teams die groeien, en lever code op die ik zelf wil onderhouden. Java, Kotlin, Spring, en het inzicht om te weten wanneer ik ze beter niet kan gebruiken.
 skills.expertise.backend=Backend Development
 skills.expertise.backend.desc=Java, Kotlin, Spring Boot, Microservices
 skills.expertise.cloud=Cloud & DevOps
@@ -85,7 +85,7 @@ certificates.thesis=Scriptie
 # Recommendations
 recommendations.badge=Wat anderen zeggen
 recommendations.title=Aanbevelingen
-recommendations.description=Mooie woorden van collega's en managers met wie ik het voorrecht had samen te werken.
+recommendations.description=Wat mensen zeggen als ze niet aardig hoeven zijn. (Spoiler: ze zijn toch aardig.)
 recommendations.view.letter=Bekijk brief
 recommendations.prev=Vorige aanbeveling
 recommendations.next=Volgende aanbeveling
@@ -100,7 +100,7 @@ hobbies.photo.cat=Met mijn kat
 hobbies.photo.pieter=Met collega Pieter
 hobbies.photo.beach=Op het strand
 hobbies.photo.view=Bekijk foto {0}
-hobbies.about=Na het werk draag ik meerdere petten \u2014 en niet alleen de programmeer-pet. Ik ben een fijnproever die culinaire avonturen verkent, een game-liefhebber die altijd klaar is voor nog een rondje, een thuiskok die door receptvideo's scrollt, en een schaakamateur die online en aan het bord gambietjes speelt. Of ik nu anime aan het bingewatchen ben of de wereld rondtrek op zoek naar goed Wi-Fi, er is nooit een saai moment.
+hobbies.about=Als de IDE dichtgaat: koken van iets dat twee keer zoveel tijd kost dan bestellen, schaakopeningen die ik uit mijn hoofd ken maar niet helemaal begrijp, games die me op de beste manier frustreren, en anime met ondertiteling. Balans, blijkbaar.
 hobbies.languages=Talen
 hobbies.lang.dutch=Nederlands
 hobbies.lang.english=Engels
@@ -111,7 +111,7 @@ hobbies.lang.conversational=Conversatieniveau
 # Contact
 contact.badge=In contact komen
 contact.title=Neem contact op
-contact.description=Heb je een project in gedachten of wil je gewoon praten over software engineering? Ik sta altijd open voor nieuwe kansen en ideeën.
+contact.description=Goede projecten, goede mensen, of goede discussies over software. Ik zeg niet alles ja, maar ik ben altijd nieuwsgierig.
 contact.linkedin=LinkedIn
 contact.linkedin.name=Phi Tiet
 contact.github=GitHub
@@ -130,7 +130,7 @@ contact.form.success.message=Bedankt voor je bericht. Ik neem zo snel mogelijk c
 # Projects
 projects.badge=Wat ik heb gebouwd
 projects.title=Projecten
-projects.description=Professioneel werk en persoonlijke projecten die mijn groei als engineer weerspiegelen.
+projects.description=Dingen die ik bouwde omdat iemand me ervoor betaalde, en dingen die ik bouwde omdat ik wilde dat ze bestonden. Beiden hebben me iets geleerd.
 projects.professional=Professioneel
 projects.personal=Persoonlijk
 projects.view.timeline=Bekijk in tijdlijn
