--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -18,11 +18,10 @@ theme.toggle.dark=Switch to dark mode
 theme.toggle.light=Switch to light mode
 
 # Hero
-hero.welcome=Welcome to my self-built portfolio website!
 hero.greeting=Hey there, I'm
 hero.name=Phi Tiet
 hero.title=Senior Software Engineer
-hero.description=I build robust backend systems with Java and Kotlin. With over {0} years of professional experience, I focus on clean architecture, microservices, and mentoring to deliver quality software.
+hero.description=Welcome to my self-built portfolio website! I build robust backend systems with Java and Kotlin. With over {0} years of professional experience, I focus on clean architecture, microservices, and mentoring to deliver quality software.
 hero.view.work=View My Work
 hero.get.in.touch=Get in Touch
 hero.about.website=About This Website
@@ -52,6 +51,7 @@ about.tech.thymeleaf=Thymeleaf
 about.tech.alpinejs=Alpine.js
 about.tech.tailwind=Tailwind CSS 4
 about.tech.yaml=YAML-driven
+about.tech.docker=Docker
 about.github.cta=View source on GitHub
 about.github.repo=PhiTiet/portfolio
 
