--- a/src/main/resources/messages_nl.properties
+++ b/src/main/resources/messages_nl.properties
@@ -18,11 +18,10 @@ theme.toggle.dark=Schakel naar donker thema
 theme.toggle.light=Schakel naar licht thema
 
 # Hero
-hero.welcome=Welkom op mijn zelfgebouwde portfolio website!
 hero.greeting=Hey, ik ben
 hero.name=Phi Tiet
 hero.title=Senior Software Engineer
-hero.description=Ik bouw robuuste backend-systemen met Java en Kotlin. Met meer dan {0} jaar professionele ervaring richt ik me op clean architecture, microservices en het begeleiden van teams om kwalitatieve software te leveren.
+hero.description=Welkom op mijn zelfgebouwde portfolio website! Ik bouw robuuste backend-systemen met Java en Kotlin. Met meer dan {0} jaar professionele ervaring richt ik me op clean architecture, microservices en het begeleiden van teams om kwalitatieve software te leveren.
 hero.view.work=Bekijk mijn werk
 hero.get.in.touch=Neem contact op
 hero.about.website=Over deze website
