feat(hero): add welcome message to description and add Docker to tech stack (#80)
- Remove welcome message from top of hero section (reverts #77)
- Add welcome message to the beginning of hero.description in both languages
- Add Docker to the tech stack in the About This Website modal

--- a/src/main/resources/messages_nl.properties
+++ b/src/main/resources/messages_nl.properties
@@ -51,6 +51,7 @@ about.tech.thymeleaf=Thymeleaf
 about.tech.alpinejs=Alpine.js
 about.tech.tailwind=Tailwind CSS 4
 about.tech.yaml=YAML-driven
+about.tech.docker=Docker
 about.github.cta=Bekijk de broncode op GitHub
 about.github.repo=PhiTiet/portfolio
 
