--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -51,6 +51,7 @@ about.tech.thymeleaf=Thymeleaf
 about.tech.alpinejs=Alpine.js
 about.tech.tailwind=Tailwind CSS 4
 about.tech.yaml=YAML-driven
+about.tech.docker=Docker
 about.github.cta=View source on GitHub
 about.github.repo=PhiTiet/portfolio
 
