--- a/src/main/resources/messages_nl.properties
+++ b/src/main/resources/messages_nl.properties
@@ -136,6 +136,7 @@ projects.personal=Persoonlijk
 projects.view.timeline=Bekijk in tijdlijn
 projects.view.project=Bekijk project
 projects.private=Priv\u00e9
+projects.in.progress=In Ontwikkeling
 # Professionele projecten
 projects.ahold.title=Ahold Delhaize
 projects.ahold.description=Gewerkt in Gambit, de ad-tech-divisie van Ahold Delhaize, waar ik microservices bouwde en onderhield voor het aanmaken en factureren van mediacampagnes.
@@ -146,6 +147,8 @@ projects.qualogy.description=Bijgedragen aan interne projecten zoals de KNSB bac
 projects.medit.title=MedIT Solutions
 projects.medit.description=Gewerkt aan MediCheck \u2014 een web- en mobiele applicatie voor verpleeghuizen om medicijnen toe te dienen aan pati\u00ebnten, feedback vast te leggen en samen te werken binnen zorgteams.
 # Persoonlijke projecten
+projects.dailytalktopics.title=Daily Talk Topics
+projects.dailytalktopics.description=Een mobiele app (iOS & Android) die dagelijks verse gespreksonderwerpen levert. Kies uit 3 willekeurige categorie\u00ebn, ontvang onderwerpen als flipkaarten en start echte gesprekken. Gebouwd met Kotlin + Spring Boot backend, React Native (Expo) frontend en AI-gegenereerde content via Ollama.
 projects.portfolio.title=Portfolio Website
 projects.portfolio.description=Deze website \u2014 een zelfgehoste Spring Boot-applicatie met Thymeleaf, Alpine.js en Tailwind CSS.
 projects.aoc.title=Advent of Code
