--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -138,6 +138,16 @@ projects.view.project=View project
 projects.private=Private
 projects.in.progress=In Progress
 
+# Professional projects
+projects.ahold.title=Ahold Delhaize
+projects.ahold.description=Worked in Gambit, Ahold Delhaize's ad-tech division, building and maintaining microservices that facilitate the creation and billing of media campaigns.
+projects.rabobank.title=Rabobank
+projects.rabobank.description=Built and maintained MED \u2014 a dashboard for mortgage advisors and customers to plan mortgages, upload documents, track phases, and communicate with each other.
+projects.qualogy.title=Qualogy
+projects.qualogy.description=Contributed to in-house projects such as the KNSB back-end, led candidate selection through interviews and programming assignments, and organized knowledge sessions and company events.
+projects.medit.title=MedIT Solutions
+projects.medit.description=Worked on MediCheck \u2014 a web and mobile application used in nursing homes to administer medicine to patients, record feedback, and collaborate across care teams.
+
 # Personal projects
 projects.dailytalktopics.title=Daily Talk Topics
 projects.dailytalktopics.description=A mobile app (iOS & Android) that delivers fresh conversation starters every day. Pick from 3 random categories, get topics as flip cards, and spark real conversations. Built with Kotlin + Spring Boot backend, React Native (Expo) frontend, and AI-generated content via Ollama.
