--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -150,7 +150,7 @@ projects.medit.description=Worked on MediCheck \u2014 a web and mobile applicati
 
 # Personal projects
 projects.dailytalktopics.title=Daily Talk Topics
-projects.dailytalktopics.description=A mobile app (iOS & Android) that delivers fresh conversation starters every day. Pick from 3 random categories, get topics as flip cards, and spark real conversations. Built with Kotlin + Spring Boot backend, React Native (Expo) frontend, and AI-generated content via Ollama.
+projects.dailytalktopics.description=A mobile app that delivers fresh conversation starters every day. Pick a category, get topics as flip cards, and spark real conversations.
 projects.portfolio.title=Portfolio Website
 projects.portfolio.description=This website \u2014 a self-hosted Spring Boot application with Thymeleaf, Alpine.js and Tailwind CSS.
 projects.aoc.title=Advent of Code
